LU-4226 fld: Make all MD sequence lookup point to MDT0

If the server can not locate the sequence in FLDB, make it point
to MDT0.

It is not a real fix, but just a temporary patch to make FLDB
lookup "working", and this should be removed after the real
problem is solved.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I80fd4e18745675f268a7288389a58a6e16625068